--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "appy",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -20,7 +20,14 @@
     "react-native": "0.73.4",
     "react-native-dotenv": "^3.4.10",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "expo-router": "~3.4.7",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "expo-linking": "~6.2.2",
+    "expo-constants": "~15.4.5",
+    "expo-haptics": "~12.8.1",
+    "expo-image": "~1.10.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
