--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "expo-linking": "~6.2.2",
     "expo-constants": "~15.4.5",
     "expo-haptics": "~12.8.1",
-    "expo-image": "~1.10.6"
+    "expo-image": "~1.10.6",
+    "expo-secure-store": "~12.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
