--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "@types/react": "~18.2.45",
     "axios": "^1.6.7",
     "expo": "~50.0.7",
+    "expo-constants": "~15.4.5",
+    "expo-haptics": "~12.8.1",
+    "expo-image": "~1.10.6",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.7",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-dotenv": "^3.4.10",
-    "react-native-web": "~0.19.6",
-    "typescript": "^5.3.0",
-    "expo-router": "~3.4.7",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "expo-linking": "~6.2.2",
-    "expo-constants": "~15.4.5",
-    "expo-haptics": "~12.8.1",
-    "expo-image": "~1.10.6",
-    "expo-secure-store": "~12.8.1"
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
